Map z-index fix

--- a/wp-content/themes/giger-kms/src/sass/_modules.scss
+++ b/wp-content/themes/giger-kms/src/sass/_modules.scss
@@ -57,7 +57,7 @@
 	}
 }
 
-.leaflet-bottom, .leaflet-top {
+.leaflet-control-container .leaflet-bottom, .leaflet-control-container .leaflet-top {
 	z-index: 200;
 }
 
